--- a/provisioning/ansible/roles/web-rust/tasks/main.yaml
+++ b/provisioning/ansible/roles/web-rust/tasks/main.yaml
@@ -1,4 +1,14 @@
 ---
+- name: Cargo update
+  become: yes
+  become_user: isucon
+  args:
+    chdir: /home/isucon/isuumo/webapp/rust
+  environment:
+    PATH: "/home/isucon/local/go/bin:/home/isucon/local/node/bin:/home/isucon/local/ruby/bin:/home/isucon/local/python/bin:/home/isucon/local/perl/bin:/home/isucon/local/php/bin:/home/isucon/.cargo/bin:/home/isucon/.deno/bin:/home/isucon/bin:/home/isucon/.local/bin:/usr/bin:/sbin:/bin"
+  shell: |
+    cargo update
+
 - name: Build Web Application Rust
   become: yes
   become_user: isucon
