--- a/provisioning/ansible/allinone.yaml
+++ b/provisioning/ansible/allinone.yaml
@@ -5,13 +5,13 @@
     - role: common
     - role: langs
     - role: web-bootstrap
-    - role: web-go
-    - role: web-node
-    - role: web-ruby
+    # - role: web-go
+    # - role: web-node
+    # - role: web-ruby
     - role: web-rust
-    - role: web-deno
-    - role: web-php
-    - role: web-perl
+    # - role: web-deno
+    # - role: web-php
+    # - role: web-perl
     - role: web-python
     - role: web-prepare
     - role: bench
